# firebase-unity-sdk

./: .gitallowed  .gitignore  65544690439  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  a-i  build_android.sh  build_bash.sh  build_ios.sh  build_linux.sh  build_macos.sh  build_package.py  build_windows_x32.bat  build_windows_x64.bat  cacert_download.sh  cacert_download_crls.sh  cp_dlls.py  g-bot  pull_request_template.md  requirements.txt  swig_commenter.py  swig_debug_parser.py  swig_nested_fix.py  swig_post_process.py  unpack_package.py
.allstar/: binary_artifacts.yaml
aar_builder/: AndroidManifest.xml  build_aar.py  merge_aar.py  merge_aar.sh
analytics/: CMakeLists.txt  generate_constants.py
app/: CMakeLists.txt
app/platform/: CMakeLists.txt  Dispatcher.cs  ExceptionAggregator.cs  FirebaseAppPlatform.cs  FirebaseAppUtils.cs  IAppConfigExtensions.cs  IClockService.cs  IFirebaseAppPlatform.cs  IFirebaseAppUtils.cs  IHttpFactoryService.cs  ILoggingService.cs  MainThreadProperty.cs  PlatformLogLevel.cs  Services.cs
app/platform/Default/: AppConfigExtensions.cs  SystemClock.cs
app/platform/Mono/: FirebaseHandler.cs  FirebaseLogger.cs  MonoPlatformServices.cs  PlatformInformation.cs
app/platform/Unity/: AssemblyInfo.cs  FirebaseEditorDispatcher.cs  FirebaseHandler.cs  FirebaseLogger.cs  FirebaseMonoBehaviour.cs  PlatformInformation.cs  UnityConfigExtensions.cs  UnityLoggingService.cs  UnityPlatformServices.cs  UnitySynchronizationContext.cs
app/src/: AppOptions.cs  DependencyStatus.cs  ErrorMessages.cs  FirebaseException.cs  InitializationException.cs  LogUtil.cs  MonoPInvokeCallbackAttribute.cs  TaskCompletionSourceCompat.cs  VariantExtension.cs  VersionInfoTemplate.cs  cpp_instance_manager.h  cpp_instance_manager_test.cc  export_fix.cc  export_fix.h  unity_main.cpp
app/src/internal/: AssemblyInfo.cs  Firebase.App.Internal.asmdef  FirebaseInterops.cs  HttpHelpers.cs  link.xml
app/src/swig/: app.i  future.i  init_result.i  null_check_this.i  serial_dispose.i
app/task_extension/: CMakeLists.txt  TaskExtension.cs
app_check/: CMakeLists.txt
auth/: CMakeLists.txt
cmake/: ExpectedTestDependencies.xml  FindMono.cmake  FindUnity.cmake  FindUnityMono.cmake  android_dependencies.cmake  apple.toolchain.cmake  build_aar.cmake  build_firebase_aar.cmake  build_shared.cmake  build_universal.cmake  dependencies.template  external_rules.cmake  firebase_swig.cmake  firebase_unity_version.cmake  (+11 more)
crashlytics/: CMakeLists.txt  link.xml
crashlytics/src/: AndroidImpl.cs  Crashlytics.cs  ExceptionHandler.cs  IOSImpl.cs  Impl.cs  LoggedException.cs  Metadata.cs  MetadataBuilder.cs  StackTraceParser.cs
crashlytics/src/cpp/: CMakeLists.txt
crashlytics/src/cpp/android/: crashlytics_android.cc  crashlytics_android.h
crashlytics/src/cpp/common/: crashlytics.cc
crashlytics/src/cpp/include/firebase/: crashlytics.h
crashlytics/src/cpp/ios/: CrashlyticsiOSWrapper.h  CrashlyticsiOSWrapper.m
crashlytics/src/cpp/ios/Crashlytics_PrivateHeaders/: Crashlytics_Platform.h  ExceptionModel_Platform.h
crashlytics/src/cpp/stub/: crashlytics_stub.cc  crashlytics_stub.h
crashlytics/src/swig/: crashlytics.i
crashlytics/testapp/: readme.md
crashlytics/testapp/Assets/Firebase/Sample/Crashlytics/: MainSceneAutomated.unity  UIHandlerAutomated.cs
crashlytics/testapp/ProjectSettings/: ProjectSettings.asset
firestore/: .gitignore  CMakeLists.txt  CONTRIBUTING.md
firestore/scripts/: README.md  cp_unity_dlls.py  cp_unity_testapp.py
firestore/snippets/: Snippets.cs
firestore/src/: AggregateQuery.cs  AggregateQuerySnapshot.cs  AggregateSource.cs  Blob.cs  BuildStubs.cs  CollectionReference.cs  ConverterRegistry.cs  DeserializationContext.cs  DocumentChange.cs  DocumentReference.cs  DocumentSnapshot.cs  FieldPath.cs  FieldValue.cs  Filter.cs  FirebaseFirestore.cs  FirebaseFirestoreSettings.cs  FirestoreConverter.cs  FirestoreDataAttribute.cs  FirestoreDocumentIdAttribute.cs  FirestoreEnumNameConverter.cs  FirestoreError.cs  FirestoreException.cs  FirestorePropertyAttribute.cs  GeoPoint.cs  ListenerRegistration.cs  ListenerRegistrationMap.cs  LoadBundleTaskProgress.cs  MetadataChanges.cs  MonoPInvokeCallbackAttribute.cs  Query.cs  QuerySnapshot.cs  SerializationContext.cs  ServerTimestampAttribute.cs  ServerTimestampBehavior.cs  SetOptions.cs  SnapshotMetadata.cs  Source.cs  Timestamp.cs  Transaction.cs  TransactionManager.cs  (+5 more)
firestore/src/Converters/: AnonymousTypeConverter.cs  ArrayConverter.cs  AttributedIdAssigner.cs  AttributedTypeConverter.cs  ConverterBase.cs  ConverterCache.cs  CustomConverter.cs  DictionaryConverter.cs  EnumConverter.cs  EnumerableConverter.cs  EnumerableConverterBase.cs  IFirestoreInternalConverter.cs  MapConverterBase.cs  SimpleConverters.cs
firestore/src/internal/: AssertFailedException.cs  Enums.cs  EnvironmentVersion.cs  Hash.cs  Preconditions.cs  Util.cs
firestore/src/swig/: CMakeLists.txt  api_headers.h  document_event_listener.cc  document_event_listener.h  equality_compare.cc  equality_compare.h  firestore.i  firestore_instance_management.cc  firestore_instance_management.h  hash.cc  hash.h  load_bundle_task_progress_callback.cc  load_bundle_task_progress_callback.h  map.h  proxy_helpers.i  query_event_listener.cc  query_event_listener.h  snapshots_in_sync_listener.cc  snapshots_in_sync_listener.h  transaction_manager.cc  transaction_manager.h  types.i  vector.h
firestore/test/: CMakeLists.txt  firestore_cpp_test.cc
firestore/testapp/Assets/Firebase/Editor/: Builder.cs
firestore/testapp/Assets/Firebase/Sample/Firestore/: BundleBuilder.cs  EventAccumulator.cs  InvalidArgumentsTest.cs  SerializationTestData.cs  UIHandler.cs  UIHandlerAutomated.cs
firestore/testapp/Assets/Tests/: BundlesTests.cs  EventAccumulator.cs  FirestoreInstanceTests.cs  FirestoreIntegrationTests.cs  InvalidArgumentsTest.cs  MiscellaneousTests.cs  MutationTests.cs  ObjectMappingTests.cs  QueryAndListenerTests.cs  SerializationTestData.cs  TestAsserts.cs  Tests.asmdef  TransactionAndBatchTests.cs
firestore/testapp/ProjectSettings/: ProjectSettings.asset
(+529 files in other folders)
